[WFLY-15739] Set java.security.manager system property value to "allow" in order to be able to install security manager on JDK 18+.